<resources>
    <string name="app_name">Dami Bazzar</string>


    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="left_arrow">Left Arrow</string>
    <string name="right_arrow">Right Arrow</string>
    <string name="swipe_right_for_login">Swipe Right for LogIn</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="register_as">Register as:</string>
    <string name="login_as">Login as:</string>
    <string name="buyer">Buyer</string>
    <string name="seller">Seller</string>


    <string name="app_title">DAMI BAZZAR</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="home_text">"Home "</string>
    <string name="zip_code">ZIP Code</string>
    <string name="already_a_member_login">Already a member? LogIn</string>
    <string name="create_new_account_signup">Create new account? SignUp</string>
    <string name="welcome_to_home_page">Welcome To Home Page!</string>
    <string name="dami_bazzar">DAMI BAZZAR</string>
    <string name="title_activity_home_activity">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="dress_for_the_occasion">Dress For The Occasion</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="recovery_email">Recovery Email</string>
    <string name="submit">Submit</string>
    <string name="back_to_login">Back to Login</string>
    <string name="profile">Profile</string>
    <string name="signup">Sign Up</string>
    <string name="notloggedin">Not Signed in. Please LogIn or Sign Up for new Account.</string>
    <string name="edit_info">Edit Info</string>
    <string name="profilepic">profilepic</string>
    <string name="seller_dashboard"><u>Seller Dashboard</u></string>
    <string name="new_listings">Add New Listing</string>
    <string name="search_your_listings">Search your listings</string>
    <string name="item_title">Item Title</string>
    <string name="item_description">Item Description</string>
    <string name="quantity_available">Quantity Available</string>
    <string name="price">Price</string>
    <string name="add_new_listing"><u>Add New Listing</u></string>
    <string name="add_item">Add Item</string>
    <string name="item_color">Item Color</string>
    <string name="for_male_female_unisex">For: Male, Female, Unisex</string>
    <string name="size_small_medium_large_extralarge">Size: Small, Medium, Large, ExtraLarge</string>
    <string name="load_picture">Load Picture</string>
    <string name="search">Search</string>

    <string-array name="color">
        <item>Red</item>
        <item>Orange</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Blue</item>
        <item>Brown</item>
        <item>Black</item>
        <item>Gray</item>
        <item>White</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Violet</item>
    </string-array>

    <string-array name="size">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra Large</item>
    </string-array>

    <string-array name="gender">
        <item>Female</item>
        <item>Male</item>
        <item>Unisex</item>
    </string-array>


</resources>