<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:gravity="center|center_horizontal"
    android:orientation="vertical">


    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/app_title"
        android:textColor="@color/black"
        android:textSize="45sp"/>

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abhaya_libre_medium"
        android:text="@string/dress_for_the_occasion"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginBottom="120sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abhaya_libre_bold"
        android:text="@string/forgot_password"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/recovery_email"
        style="@style/Login_EditText"
        android:layout_marginTop="40sp"
        android:autofillHints="Recovery Email"
        android:drawableEnd="@drawable/ic_email"
        android:hint="@string/recovery_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnsubmit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:height="60dp"
        android:fontFamily="@font/abhaya_libre_bold"
        android:text="@string/submit"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/gotologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:text="@string/back_to_login" />


</LinearLayout>