<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".login.fragments.registerFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/register_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:gravity="center|center_horizontal"
            android:orientation="vertical"
            android:paddingTop="50sp"
            android:paddingBottom="50sp"
            android:verticalScrollbarPosition="defaultPosition">

            <TextView
                android:id="@+id/appTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:fontFamily="@font/berkshire_swash"
                android:text="DAMI BAZZAR"
                android:textColor="@color/black"
                android:textSize="45sp"
                app:layout_constraintBottom_toTopOf="@+id/login_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dress for occassion"
                app:layout_constraintTop_toBottomof="@+id/appTitle">

            </EditText>



            <EditText
                android:id="@+id/login_firstname"
                style="@style/Login_EditText"

                android:drawableEnd="@drawable/ic_person"
                android:hint="@string/first_name"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/login_lastname"
                style="@style/Login_EditText"

                android:drawableEnd="@drawable/ic_person"
                android:hint="@string/last_name"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/login_username"
                style="@style/Login_EditText"

                android:drawableEnd="@drawable/ic_user"
                android:hint="@string/username"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/login_email"
                style="@style/Login_EditText"

                android:drawableEnd="@drawable/ic_email"
                android:hint="@string/e_mail"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/login_password"
                style="@style/Login_EditText"

                android:drawableEnd="@drawable/ic_password"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/login_password2"
                style="@style/Login_EditText"

                android:drawableEnd="@drawable/ic_password"
                android:hint="@string/confirm_password"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abhaya_libre_bold"
                android:text="@string/register_as"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/login_radioGroup"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/buyerRadioBtn"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:checked="true"
                    android:fontFamily="@font/abhaya_libre_medium"
                    android:text="@string/buyer"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/sellerRadioBtn"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:fontFamily="@font/abhaya_libre_medium"
                    android:text="@string/seller"
                    android:textSize="20sp" />

            </RadioGroup>

            <EditText
                android:id="@+id/login_zipcode"
                style="@style/Login_EditText"

                android:drawableEnd="@drawable/ic_location"
                android:hint="@string/zip_code"
                android:importantForAutofill="no"
                android:inputType="number" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:height="60dp"
                android:fontFamily="@font/abhaya_libre_bold"
                android:text="@string/register"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/goLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/already_a_member_login"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>