<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".login.fragments.loginFragment">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/app_title"
        android:textColor="@color/black"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/login_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abhaya_libre_medium"
        android:text="@string/dress_for_the_occasion"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/login_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/login_username"
        style="@style/Login_EditText"

        android:autofillHints="@string/username"
        android:drawableEnd="@drawable/ic_user"
        android:hint="@string/username"
        android:inputType="textEmailAddress"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.323" />

    <EditText
        android:id="@+id/login_password"
        style="@style/Login_EditText"

        android:drawableEnd="@drawable/ic_password"
        android:autofillHints="Password"
        android:hint="@string/password"
        android:inputType="textPassword"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_username"
        app:layout_constraintVertical_bias="0.081" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/abhaya_libre_bold"
        android:text="@string/login_as"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/login_radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

    <RadioGroup
        android:id="@+id/login_radioGroup"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:fontFamily="@font/abhaya_libre_medium"
        android:orientation="horizontal"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password">

        <RadioButton
            android:id="@+id/buyerRadioBtn"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:checked="true"
            android:fontFamily="@font/abhaya_libre_medium"
            android:text="@string/buyer"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/sellerRadioBtn"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:fontFamily="@font/abhaya_libre_medium"
            android:text="@string/seller"
            android:textSize="20sp" />

    </RadioGroup>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:height="60dp"
        android:fontFamily="@font/abhaya_libre_bold"
        android:text="@string/log_in"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:id="@+id/goSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:text="@string/create_new_account_signup"
        android:textSize="15sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotpasswordtext"
        app:layout_constraintVertical_bias="0.422" />

    <TextView
        android:id="@+id/forgotpasswordtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/forgot_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.215" />


</androidx.constraintlayout.widget.ConstraintLayout>