<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".home.ui.profile.ProfileFragment">

    <WebView
        android:id="@+id/profilewebview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

    </WebView>

    <LinearLayout
        android:id="@+id/profileLinearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/profileinfodisplay"
            android:fontFamily="@font/abhaya_libre_bold"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_marginBottom="40sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notloggedin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnlogin"
                android:layout_width="150sp"
                android:layout_height="50sp"
                android:fontFamily="@font/abhaya_libre_bold"
                android:textSize="18sp"

                android:layout_marginEnd="30sp"
                android:text="@string/log_in" />

            <Button
                android:id="@+id/btnsignup"
                android:layout_width="150sp"
                android:layout_height="50sp"
                android:fontFamily="@font/abhaya_libre_bold"
                android:textSize="18sp"

                android:layout_marginStart="30sp"
                android:text="@string/signup" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>