<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".home.ui.dashboard.DashboardFragment">


    <ScrollView
        android:id="@+id/buyerScrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone">

        <LinearLayout
            android:id="@+id/buyerlinearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/dashboardaskloginlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone">

        <TextView
            android:id="@+id/profileinfodisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40sp"
            android:fontFamily="@font/abhaya_libre_bold"
            android:text="@string/notloggedin"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnlogin"
                android:layout_width="150sp"
                android:layout_height="50sp"
                android:layout_marginEnd="30sp"
                android:fontFamily="@font/abhaya_libre_bold"

                android:text="@string/log_in"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnsignup"
                android:layout_width="150sp"
                android:layout_height="50sp"
                android:layout_marginStart="30sp"
                android:fontFamily="@font/abhaya_libre_bold"

                android:text="@string/signup"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>